# autonomy-scenario-validator

./: CMakeLists.txt  README.md
apps/: scenario_playback.cpp
data/: sample_obstacles.csv  sample_trajectory.csv
include/core/: report.h  types.h
include/io/: csv_reader.h  scenario_loader.h
include/model/: obstacles.h  scenario.h  trajectory.h
include/validators/: acceleration_limit.h  collision_aabb.h  lane_boundary.h  speed_limit.h  validator.h
src/core/: report.cpp
src/io/: csv_reader.cpp  scenario_loader.cpp
src/validators/: acceleration_limit.cpp  collision_aabb.cpp  lane_boundary.cpp  speed_limit.cpp
tests/: smoke_test.cpp
